création page pour 1 article blog

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -442,6 +442,26 @@ ul.sidebar-gallery {
   border-radius: 4px;
   display: inline-block;
 }
+
+body, html {
+  height: 100%;
+}
+/*===========================
+	page article
+============================ */
+.parallax {
+  /* The image used */
+  /* background-image: url("img_parallax.jpg"); */
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /*===========================
 	footer
 ============================ */
