--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -454,13 +454,19 @@ body, html {
   /* background-image: url("img_parallax.jpg"); */
 
   /* Full height */
-  height: 100%;
+  height: 50%;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.container{
+  background-color: white;
+}
+.parallax-container{
+  height: 320px;
 }
 /*===========================
 	footer
