--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -454,7 +454,7 @@ body, html {
   /* background-image: url("img_parallax.jpg"); */
 
   /* Full height */
-  height: 50%;
+  height: 100%;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -462,11 +462,17 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.container{
+/* .container1{
   background-color: white;
-}
+} */
 .parallax-container{
   height: 320px;
+}
+.blog-content label{
+  color: #333 !important;
+}
+.bg-warning {
+  background-color: red !important;
 }
 /*===========================
 	footer
