--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -597,3 +597,24 @@ a.scrollup:hover{
 	background-color:rgb(9, 129, 55);
 	color:#fff;;	
 }
+/*===========================
+	CSS not in bootstap min
+============================ */
+.btn-circle.btn-xl {
+  width: 70px!important;
+  height: 70px!important;
+  padding: 10px 16px!important;
+  border-radius: 35px!important;
+  font-size: 24px!important;
+  line-height: 1.33!important;
+}
+
+.btn-circle {
+  width: 30px!important;
+  height: 30px!important;
+  padding: 6px 0px!important;
+  border-radius: 15px!important;
+  text-align: center!important;
+  font-size: 12px!important;
+  line-height: 1.42857!important;
+}
