--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -677,3 +677,9 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 } 
+.custom-select{
+  color: #495057 !important;
+  border: 1px solid #ced4da!important;
+  border-radius: .25rem !important;
+  padding: .375rem 1.75rem .375rem .75rem !important;
+}
