--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,10 +117,14 @@ a:hover {
 }
 .nav-tabs > li > a {	
 	border-radius:0;
-	color:#333;
-	padding:30px;
+  color:#333;
+  margin:28px;
+	padding:18px;
 }
-
+#navbarmobile>.nav-tabs>li > a {
+margin: 15px;
+padding: 5px;
+}
 .nav-tabs > li > a:hover {	
 	color: rgb(9, 129, 55);
 	border-color: #fff #fff #fff;
